--- a/Resueltos/HTML/MiPrimeraPagina.html
+++ b/Resueltos/HTML/MiPrimeraPagina.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="noticias">
     <title>Noticias de Internet</title>
+    <link rel="stylesheet" href="Estilos/MiPrimeraPagina.css">
 </head>
 <body>
     <hr>
     <h1>Noticias de Internet</h1>
     <p> En esta pagina hablamos de <strong>noticias de internet</strong> que gozan de menos exposicion. <strong>Noticias alternativas</strong>, pequenas noticias.</p>
     <hr>
-    <h2>Noticias de hoy:</h2>
+    <h2 class="h2tuneado">Noticias de hoy:</h2>
     <h3>Un senor de Cuenca apuesta por el Sol</h3>
     <p>En un giro de acontecimientos inesperado, un <strong><a href="https://www.lacerca.com/imagenes/api_thumb/03d586796d177c0cb833d69d385c333c.jpg" target="_blank">senor de cuenca apuesta todo su dinero en el sol</a></strong>. <i>El sol siempre estara ahi</i> ha asegurado este optimista conquense que ya ha convencido a mas de <b>500 vecinos de su comunidad para invertir en el SOL</b>. <br>
     Jugada arriesgada o inversion a futuro? </p>
